<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_app">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/app_instructions" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/question1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dmajor" />

        <RadioGroup
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_margin_left"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answerOneA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerA1"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerOneB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerB1"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerOneC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerC1"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerOneD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerD1"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/question2" />

        <RadioGroup
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_margin_left"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answerTwoA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerA2"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerTwoB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerB2"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />


        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/question3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/capo" />

        <RadioGroup
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_margin_left"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answerThreeA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerA3"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerThreeB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerB3"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerThreeC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerC3"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerThreeD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerD3"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/question4" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eminor" />

        <RadioGroup
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_margin_left"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answerFourA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerA4"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerFourB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerB4"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerFourC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerC4"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answerFourD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerD4"
                android:textSize="@dimen/radio_text_size"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/questionEditText" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/slash"/>

        <EditText
            android:id="@+id/answerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="type your answer here"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/scoreBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_top_checkbox">

            <CheckBox
                android:id="@+id/sendEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_checkbox"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/sendEmail"
                android:textSize="@dimen/checkbox_text_size"
                />

        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_left_button"
            android:onClick="submitAnswer"
            android:text="Submit Answer"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/resetQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_left_button"
            android:onClick="resetQuiz"
            android:text="Reset Quiz"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/app_description" />


    </LinearLayout>
</ScrollView>